--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
    
     <!-- jQyuery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    </script>
     <!--JavaScript-->
-    <script type="text/javascript" src="assets/javascript/app.js">
-   
-    </script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
